apps/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 2222
      targetPort: 2222
  type: ClusterIP
